# non-local-means-denoising-neon

./: CMakeLists.txt  README.md  main.cpp
data/: denoised.ascii.pgm  lena_128x128_sigma_0.2.ascii.pgm
